syntax = "proto3";

package Ad;

option go_package = "build/shopping_admin";
import "protos/global/global.proto";

message Ad {
  string adId = 1;  // @gotags:  gorm:"primary_key;<-:create" validate:"required"
  // 广告类型(1:全网推广广告，2:商家自定义广告)
  int64 adType = 2;  // @gotags:  validate:"required"
  // 广告信息json数组：[{"title":"商品标题","url":"广告图地址","goodId":"跳转的商品id"}]
  repeated AdInfo adInfo = 3;
  // 呈现类型(1:轮播图广告，2:单图片广告)
  int64 viewType = 4;  // @gotags:  validate:"required"
  // 店铺id
  string storeId = 5;  // @gotags:  validate:"required"
  // 广告位置
  int64 position = 6;  // @gotags:  validate:"required"
  // 删除状态
  bool delStatus = 7;  // @gotags: gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"
  // 创建人
  string createBy = 8;  // @gotags: gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 修改人
  string updateBy = 9;  // @gotags: gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"
  // 创建时间
  string createTime = 10;  // @gotags: gorm:"->" swaggerignore:"true"
  // 修改时间
  string updateTime = 11;  // @gotags: gorm:"->" swaggerignore:"true"
}

message AdDetailVO {
  string adId = 1;  // @gotags:  gorm:"primary_key;<-:create" validate:"required"
  // 广告类型(1:全网推广广告，2:商家自定义广告)
  int64 adType = 2;  // @gotags:  validate:"required"
  // 广告信息json数组：[{"title":"商品标题","url":"广告图地址","goodId":"跳转的商品id"}]
  repeated AdInfo adInfo = 3;
  // 呈现类型(1:轮播图广告，2:单图片广告)
  int64 viewType = 4;  // @gotags:  validate:"required"
  // 店铺id
  string storeId = 5;  // @gotags:  validate:"required"
  // 广告位置
  string position = 6;  // @gotags: gorm:"-"
  // 广告类型名称
  string adTypeName = 7;  // @gotags: gorm:"-"
  // 呈现类型名称
  string viewTypeName = 8;  // @gotags: gorm:"-"
  // 广告位置名称
  string positionName = 9;  // @gotags: gorm:"-"
  // 店铺名称
  string storeName = 10;  // @gotags: gorm:"-"
  // 商品名称
  string productName = 11;  // @gotags: gorm:"-"
  // 创建时间
  string createTime = 12;  // @gotags: gorm:"-"
}

message AdInfo {
  // 广告标题
  string title = 1;
  // 广告图片地址
  string imageUrl = 2;
  // 跳转地址
  string targetUrl = 3;
}

message AdParam { }

message AdIds {
  repeated string id = 1;
  string userId = 2;
}

// 分页查询加权参数
message AdPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;
  // 分页长度
  int64 pageSize = 2;
  // 查询参数
  AdParam params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

// 返回结果
message AdResponse {
  int64 count = 1;  // 获取数据数量
  string Msg = 2;  // 错误信息
  Ad detail = 3;  // 详情
  repeated Ad list = 4;  // 列表
}

// 业务实现
service AdService {
  // 新增
  rpc Create(Ad) returns (AdResponse);

  // 修改
  rpc Update(Ad) returns (AdResponse);

  // 删除
  rpc Delete(AdIds) returns (AdResponse);

  // 查询 详情
  rpc FindById(AdIds) returns (AdResponse);

  // 查询 分页
  rpc FindPageList(AdPageAuthQuery) returns (AdResponse);
}
